--- a/Gambar/index.html
+++ b/Gambar/index.html
@@ -1,131 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TUGAS MENGGAMBAR MENGGUNAKAN HTML</title>
+    <style>
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(7, 120px);
+            grid-template-rows: repeat(13, 40px);
+            gap: 0px;
+        }
+        .pixel {
+            width: 40px;
+            height: 40px;
+        }
+        .skin { background-color: #deb887; }
+        .black { background-color: #000; }
+        .empty { background-color: white; }
+    </style>
 </head>
-
 <body>
-    <table style="text-align: center;" width="100%" cellspacing="0" cellpadding="20">
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td rowspan="2" bgcolor="black"></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td rowspan="2" colspan="3" bgcolor="black"></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td colspan="5" bgcolor="black"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td colspan="5" bgcolor="black"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td colspan="5" bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td bgcolor="pink"></td>
-            <td bgcolor="black"></td>
-            <td bgcolor="pink"></td>
-            <td rowspan="2" bgcolor="black"></td>
-            <td bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td bgcolor="pink"></td>
-            <td colspan="3" bgcolor="black"></td>
-            <td bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td bgcolor="pink"></td>
-            <td bgcolor="black"></td>
-            <td bgcolor="pink"></td>
-            <td bgcolor="black"></td>
-            <td bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td colspan="5" bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td colspan="5" bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td colspan="5" bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td colspan="5" bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td bgcolor="pink"></td>
-            <td bgcolor="black" colspan="3"></td>
-            <td bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td colspan="5" bgcolor="pink"></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
+    <p>Hasil Gambar dengan HTML</p>
+    <div class="grid">
+        <div class="empty"></div> <div class="empty"></div> <div class="empty"></div> <div class="black"></div> <div class="empty"></div> <div class="empty"></div> <div class="empty"></div>
+        <div class="empty"></div> <div class="empty"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="empty"></div> <div class="empty"></div>
+        <div class="empty"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="empty"></div>
+        <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div>
+        <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div>
+        <div class="skin"></div> <div class="black"></div> <div class="black"></div> <div class="skin"></div> <div class="black"></div> <div class="black"></div> <div class="skin"></div>
+        <div class="skin"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="skin"></div>
+        <div class="skin"></div> <div class="black"></div> <div class="black"></div> <div class="skin"></div> <div class="black"></div> <div class="black"></div> <div class="skin"></div>
+        <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div>
+        <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div>
+        <div class="skin"></div> <div class="skin"></div> <div class="black"></div> <div class="black"></div> <div class="black"></div> <div class="skin"></div> <div class="skin"></div>
+        <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div>
+        <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div> <div class="skin"></div>
+    </div>
 </body>
-
 </html>
