--- a/Register/index.html
+++ b/Register/index.html
@@ -4,34 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            width: 350px;
+            text-align: center;
+        }
+        h2 {
+            color: #333;
+        }
+        table {
+            width: 100%;
+        }
+        td {
+            padding: 10px;
+        }
+        input {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        input[type="submit"] {
+            background-color: #28a745;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            width: 100%;
+        }
+        input[type="submit"]:hover {
+            background-color: #218838;
+        }
+    </style>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h2>Register</h2>
         <form action="/submit_registration" method="post">
             <table>
                 <tr>
-                    <td><label for="username">Username : </label></td>
+                    <td><label for="username">Username:</label></td>
                     <td><input type="text" id="username" name="username" required></td>
                 </tr>
                 <tr>
-                    <td><label for="email">Email : </label></td>
+                    <td><label for="email">Email:</label></td>
                     <td><input type="email" id="email" name="email" required></td>
                 </tr>
                 <tr>
-                    <td><label for="password">Password : </label></td>
+                    <td><label for="password">Password:</label></td>
                     <td><input type="password" id="password" name="password" required></td>
                 </tr>
                 <tr>
-                    <td><label for="confirm_password">Confirm Password : </label></td>
+                    <td><label for="confirm_password">Confirm Password:</label></td>
                     <td><input type="password" id="confirm_password" name="confirm_password" required></td>
                 </tr>
                 <tr>
-                    <td><label for="profile_image">Profile Image : </label></td>
+                    <td><label for="profile_image">Profile Image:</label></td>
                     <td><input type="file" id="profile_image" name="profile_image" accept="image/*"></td>
                 </tr>
                 <tr>
-                    <td colspan="2" style="text-align: center;">
+                    <td colspan="2">
                         <input type="submit" value="Register">
                     </td>
                 </tr>
